always request server result api to get torrent when handle add movieId